--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
 <!--     <link rel="stylesheet"  th:href="@{}" />   -->
 </head>
 <body>
-<script src="/js/index.js"></script>
+<script th:src="@{/js/index.js}"></script>
 </body>
 </html>
