--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,28 +2,63 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-<!--     <title>Wangdm</title> -->
 <!-- 引入样式 -->
+<title>Xy</title>
+<meta name="description" content="折煞玲珑心,但为一点灵犀启;原将风流意,化为弦音入梦里">
 <link rel="stylesheet" th:href="@{/plugins/element-ui/2.4.2/index.css}">
 <link rel="stylesheet" th:href="@{/plugins/font-awesome-4.7.0/css/font-awesome.min.css}">
 <style>
-  .el-form-item:last-child {
-    margin-bottom: 0;
-  }
- button.submit{width: 100%;}
- .logincontainer{border: 1px solid #d8dee2;margin-top: 100px;}
- .errorContainer{position: relative;top: -330px;background-color: #ffdce0;}
+.el-form-item:last-child {margin-bottom: 0;}
+button.submit{width: 100%;}
+.logincontainer{border: 1px solid #d8dee2;margin-top: 100px;}
+.errorContainer{position: relative;top: -330px;background-color: #ffdce0;}
+.divide-wrap {
+    position: relative;
+    height: 1px;
+    z-index: 1;
+}
+.colorbar-before {
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    z-index: 9;
+    background-color: #1b24ff;
+}
+.colorbar-after {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    z-index: 9;
+    background-color: #fd0371;
+}
+.colorbar {
+    width: 100%;
+    height: 100%;
+    z-index: 11;
+    background: url(/img/login_bg.png) center no-repeat;
+    position: relative;
+}
 </style>
 </head>
 <body>
 <div id="app">
+<div class="divide-wrap">
+<div class="colorbar-before"></div>
+<div class="colorbar-after"></div>
+<div class="colorbar"></div>
+</div>
 <el-row type="flex" class="row-bg" justify="center">
   <el-col :xs="24" :sm="20" :md="12" :lg="8" :xl="5">
    <el-card shadow="always" class="logincontainer">
     <div slot="header" class="clearfix">
-     <span>选课走班管理系统</span>
+     <span>管理系统</span><span th:text="${msg}"></span>
     </div>
-    <el-form ref="form" :model="form" label-width="80px" auto-complete="off" action="" method="post">
+<!--     @submit.native.prevent -->
+    <el-form ref="form" :model="form" label-width="80px" auto-complete="off" action="" method="post" >
 	  <el-form-item label-width="0">
 		  <el-input placeholder="登录账号" v-model="form.loginname" auto-complete="off" name="username">
 		    <template slot="prepend"><i class="fa fa-user"></i></template>
@@ -35,8 +70,8 @@
 		  </el-input>
 	  </el-form-item>
 	  <el-form-item label-width="0">
-<!-- 	    <el-button type="primary" @click="onSubmit" class="submit" :loading="form.loading" native-type="submit">{{form.text}}</el-button> -->
-            <el-button type="primary" @click="onSubmit" class="submit" :loading="form.loading">{{form.text}}</el-button>
+<!-- 	    <el-button type="primary" @click="onSubmit('form')" class="submit" :loading="form.loading">{{form.text}}</el-button> -->
+            <el-button type="primary" @click="onSubmit($event)"  class="submit" :loading="form.loading" native-type="submit">{{form.text}}</el-button>
 	  </el-form-item>
 	</el-form>  
  </el-card>	
@@ -45,18 +80,12 @@
  </template>
   </el-col>
 </el-row>
-错误信息：<h4 th:text="${msg}"></h4>
-<form action="" method="post">
-    <p>账号：<input type="text" name="username" value="admin" /></p>
-    <p>密码：<input type="text" name="password" value="123456"/></p>
-    <p><input type="submit" value="登录"/></p>
-</form>
-
 </div>
-<script th:src="@{/plugins/vue/Vue.js}"></script>
 <!-- 引入组件库 -->
+<script th:src="@{/plugins/vue/Vue.js}"></script>
 <script th:src="@{/plugins/element-ui/2.4.2/index.js}"></script>
 <script th:src="@{/plugins/axios/0.18.0/axios.js}"></script>
+<script th:src="@{/js/canvas-nest.js}"></script>
 <script>
 new Vue({
     el: '#app',
@@ -73,11 +102,10 @@ new Vue({
         }
       },
       methods: {
-        onSubmit() {
+        onSubmit(event) {
+        	event.preventDefault();
         	this.form.loading=true;
         	this.form.text='登录中...';
-        	console.log(this.form.loginname);
-            console.log(this.form.password);
             if(this.form.loginname==''){
             	this.form.error=true;
             	this.form.errorMsg='账号不能为空!';
@@ -92,20 +120,44 @@ new Vue({
             	this.form.text='用户登录';
             	return;
             }
-            axios.get('/login', {
-            	username: this.form.loginname,
-                 password: this.form.password
-              })
-              .then(function (response) {
+            var $username=this.form.loginname,$password=this.form.password	;
+            var $form=this.form;
+            var instance = axios.create({
+            	  timeout: 10000,
+//             	  headers: {'Content-Type': 'application/x-www-form-urlencoded','X-Requested-With': 'XMLHttpRequest'},
+                  headers: {'X-Requested-With': 'XMLHttpRequest'},
+            	  transformRequest: [function (data) {// 格式处理
+	                  var params = new URLSearchParams();
+	                  for (var it in data) {
+	                	  params.append(it, data[it]);
+	                  }
+	            	  return params;
+            	  }],
+            	});
+            instance.request({
+           	  method: 'post',
+           	  url: '/login',
+           	  data: {username: $username,password: $password}
+           	}).then(function (response) {
                 console.log(response);
-              })
-              .catch(function (error) {
+                var data=response.data;
+                if("ok"===data.status){
+                	window.location.href="/index";
+                }else{
+                	console
+                	$form.error=true;
+                	$form.errorMsg=data.result;
+                	$form.loading=false;
+                	$form.text='用户登录';
+                }
+            }).catch(function (error) {
                 console.log(error);
-              });
+            });
         }
+        
       }
   })
-
+// }
 </script>
 </body>
 </html>
