--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,65 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Wangdm</title>
-<!--     <link rel="stylesheet"  th:href="@{}" />   -->
+    <title>Xy</title>
+<link rel="stylesheet" th:href="@{/plugins/element-ui/2.4.2/index.css}">
+<style>
+body{margin: 0;padding: 0;overflow: hidden;}
+  .el-header, .el-footer {
+    background-color: #B3C0D1;
+    color: #333;
+    text-align: center;
+    line-height: 60px;
+  }
+  
+  .el-aside {
+    background-color: #D3DCE6;
+    color: #333;
+    text-align: center;
+    line-height: 200px;
+  }
+  
+  .el-main {
+    background-color: #E9EEF3;
+    color: #333;
+    text-align: center;
+    line-height: 160px;
+  }
+  
+  body > .el-container {
+    margin-bottom: 40px;
+  }
+  
+  .el-container:nth-child(5) .el-aside,
+  .el-container:nth-child(6) .el-aside {
+    line-height: 260px;
+  }
+  
+  .el-container:nth-child(7) .el-aside {
+    line-height: 320px;
+  }
+</style>
 </head>
 <body>
-<script th:src="@{/js/index.js}"></script>
+<div id="app">
+<el-container>
+  <el-header>Header</el-header>
+  <el-container>
+    <el-aside width="200px">Aside</el-aside>
+    <el-container>
+      <el-main>Main</el-main>
+      <el-footer>Footer</el-footer>
+    </el-container>
+  </el-container>
+</el-container>
+</div>
+<script th:src="@{/plugins/vue/Vue.js}"></script>
+<script th:src="@{/plugins/element-ui/2.4.2/index.js}"></script>
+<script>
+new Vue({
+    el: '#app'
+  })
+
+</script>
 </body>
 </html>
