--- a/src/main/resources/templates/system/users/users.html
+++ b/src/main/resources/templates/system/users/users.html
@@ -2,11 +2,9 @@
 <html lang="zh" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Thymeleaf测试</title>
-<!--     <link rel="stylesheet"  th:href="@{}" />   -->
+    <title>Xy</title>
 <style type="text/css">
 IMG{max-width: 50px;}
-
 </style>
 </head>
 <body>
@@ -48,6 +46,7 @@ IMG{max-width: 50px;}
     </tr>
     </tbody>
    </table>
+   <a th:href="@{/logout}">系统退出</a>
    <div th:include="test_thymeleaf/footer :: footer" class="footerContainer"></div>
    <div th:replace="test_thymeleaf/footer :: footer" class="footerContainer"></div>
 <script th:inline="javascript">
