--- a/src/main/resources/templates/system/users/userList.html
+++ b/src/main/resources/templates/system/users/userList.html
@@ -5,6 +5,8 @@
     <title>Xy</title>
 <style type="text/css">
 IMG{max-width: 50px;}
+.currHref{    text-decoration: none;
+    color: red;}
 </style>
 </head>
 <body>
@@ -15,9 +17,10 @@ IMG{max-width: 50px;}
              <dd th:text="${#dates.format(bean.time, 'yyyy-MM-dd')}">默认时间</dd>
         </dl>
    <hr/>
+   <div><a th:href="@{/users/goEdit}" th:text="新增"></a></div>
    <div>
      <span th:if="${data.endRow eq 0}">暂无记录!</span>
-     <span th:if="${data.endRow ne 0}" th:text="|显示${data.startRow+1}到${data.endRow+1},共${data.size}条数据!|"></span>
+     <span th:if="${data.endRow ne 0}" th:text="|显示${data.startRow}至${data.endRow}条数据,共${data.total}条数据!|"></span>
    </div>
    <table>
     <thead><tr><th>序号</th><th>编号</th><th>名称</th><th>密码</th><th>创建时间</th><th>编号排序</th><th>人员类型</th><th>操作相关</th></tr></thead>
@@ -27,7 +30,8 @@ IMG{max-width: 50px;}
 	    <td th:text="${list.id}"></td>
 	    <td th:text="${list.loginname}"></td>
 	    <td th:text="${list.password}"></td>
-	    <td th:text="${list.createtime}"></td>
+<!-- 	    <td th:text="${list.createtime}"></td> -->
+<td th:text="${#calendars.format(list.createtime,'yyyy-MM-dd HH:mm')}"></td>
 	    <td th:text="${list.bhpx}" style="text-align: right;"></td>
 	    <td th:switch="${list.flag}">
 	       <img th:case="'ONE'" src="" th:src="@{/img/1.png}">
@@ -50,7 +54,11 @@ IMG{max-width: 50px;}
     </tr>
     </tbody>
    </table>
-   <div></div>
+   <div>  
+     <a th:each="obj:${data.navigatepageNums}" th:text="${data.lastPage eq obj}?|第${obj}页|:|第${obj}页、|" 
+        th:href="${data.pageNum eq obj} ?'javascript:void(0)':@{/users(pageNum=${obj},flag=9527)}"
+        th:class="${data.pageNum eq obj} ?'currHref':''"></a>
+   </div>  
    <a th:href="@{/logout}">系统退出</a>
    <div th:include="test_thymeleaf/footer :: footer" class="footerContainer"></div>
    <div th:replace="test_thymeleaf/footer :: footer" class="footerContainer"></div>
